# kailian

./: .env  .env.b  .env.example  .gitignore  Cargo.toml  Doxyfile  Makefile  README.md  kailian  kailian.conf  lll  log  log.txt  main  main.c  passwd  pwd.man  tmp  zshfallback.txt
.github/workflows/: codeql.yml
config/: application.yml  handlers.conf
documentation/html/: Environment_8c.html  Environment_8c.js  Environment_8h.html  Environment_8h.js  Environment_8h_source.html  README_8md.html  annotated.html  annotated_dup.js  argumentList_8c.html  argumentList_8c.js  argumentList_8h.html  argumentList_8h.js  argumentList_8h_source.html  askError_8c.html  askError_8c.js  askError_8h.html  askError_8h.js  askError_8h_source.html  call__api_8c.html  call__api_8c.js  call__api_8h.html  call__api_8h.js  call__api_8h_source.html  checkArgument_8c.html  checkArgument_8c.js  checkArgument_8h.html  (+54 more)
html/: doxygen_crawl.html  md_README.html  navtreedata.js  navtreeindex0.js  pages.html
include/: api.h  askError.h  call_api.h  checkArgument.h  environmentSettings.h  help.h  loadEnv.h  loggerInterface.h  manageInput.h  version.h
latex/: md_README.tex  refman.tex
lib/: api  api.c  api.h  loadEnv.c  loadEnv.h
nvim/: lazy-lock.json
src/: ai.rs  api.c  argumentList.c  askError.c  call_api.c  checkArgument.c  coffee.rs  daemon.rs  environmentSettings.c  envs.rs  help.c  info.c  kailian_env.rs  loadEnv  loadEnv.c  loggerInterface.c  main.c  main.rs  manageInput.c  prompt.rs  utils.rs
starship/: starship.toml.backup
tests/: test_manageInput.c  test_string_utils.c
(+121 files in other folders)
