[package]
name = "kailian"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
curl = "0.4.47"
daemonize = "0.5.0"
json = "0.12.4"
libc = "0.2.171"
log = "0.4.27"
nix = { version = "0.29.0", features = ["fs", "signal", "user"] }
ollama-rs = { version = "0.3.0", features = ["stream"] }
serde_json = "1.0.140"
syslog = "7.0.0"
tokio = "1.44.1"
tokio-stream = "0.1.17"
serde = { version = "1.0.219", features = ["derive"] }
